[project]
name = "python-env"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ryomac", email = "100513663+ryomac1@users.noreply.github.com" }
]
dependencies = [
    "ruff>=0.5.5",
    "mypy>=1.11.0",
    "ipykernel>=6.29.5",
    "numpy>=2.0.1",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_env"]

[tool.rye.scripts]
lint = { chain = ["lint:ruff", "lint:ruff_format", "lint:mypy" ] }
"lint:ruff" = "ruff check ./ --diff"
"lint:ruff_format" = "ruff format --check --diff"
"lint:mypy" = "mypy ./ --explicit-package-bases"

format = { chain = [ "format:ruff", "format:ruff_check" ] }
"format:ruff" = "ruff format ./"
"format:ruff_check" = "ruff check ./ --fix"